	PR fortran/20460 	* resolve.c (gfc_resolve_index): Make REAL array indices a 	GFC_STD_LEGACY feature.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113672 138bc75d-0d04-0410-961f-82ee72b054a4